implementacion de sass y vars

--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -45,13 +45,13 @@
                     </div>
                 </nav>
         </header>
-    <main class="main__contacto">
+    <main class="contacto">
         <img class="gify" src="../img/adop4.gif" alt="hasmter gif">
         <div class="contacto__titulo">
-            <h1 class="contacto__h1">Club de Mascotas Exóticas</h1>
+            <h1 class="contacto__titulo__h1">Club de Mascotas Exóticas</h1>
         </div>
         <section class="formulario">
-            <div class="contenedor__form">
+            <div class="formulario__cont">
                 <form action="#" method="get" enctype="multipart/form-data" class="formulario__contacto">
                     <fieldset>
                         <legend><strong>Formulario de Contacto</strong></legend>
