--- a/contacto/equipo.html
+++ b/contacto/equipo.html
@@ -51,11 +51,11 @@
             <div class="contenedor">
                 <div><h1 class="team__h1">The Magic Team</h1></div>
             </div>
-            <div class="team__div"><video src="../img/videoplayback.mp4" controls frameborder="0" encrypted-media allow=accelerometer; gyroscope  class="team__video">presentaciòn</video>
+            <div class="team__div"><video src="../img/videoplayback.mp4" controls frameborder="0" encrypted-media allow=accelerometer; gyroscope  class="team__div__video">presentaciòn</video>
                 <div class="team__fotos">
-                    <img class="team__img1" src="../img/erizo.jpg" alt="foto1" title="foto1">
-                    <img class="team__img2" src="../img/mujer-conejo.jpg" alt="foto2" title="foto1">
-                    <img class="team__img3" src="../img/fondo 7.png" alt="foto3" title="foto1">
+                    <img class="team__fotos__img1" src="../img/erizo.jpg" alt="foto1" title="foto1">
+                    <img class="team__fotos__img2" src="../img/mujer-conejo.jpg" alt="foto2" title="foto1">
+                    <img class="team__fotos__img3" src="../img/fondo 7.png" alt="foto3" title="foto1">
                 </div>
             </div>
         </section>
@@ -64,15 +64,15 @@
                 <div class="cartas__div">
                 <div class="cartas__creador">
                     <h2 class="cartas__h2">Creador</h2>
-                    <button class="cartas__btn"><a class="cartas__a" href="https://uy.linkedin.com/">+Info</a></button>
+                    <button class="cartas__btn"><a class="cartas__btn__a" href="https://uy.linkedin.com/">+Info</a></button>
                 </div>
                 <div class="cartas__desarrollador">
                     <h2 class="cartas__h2">Diseñador</h2>
-                    <button class="cartas__btn"><a class="cartas__a" href="https://uy.linkedin.com/">+Info</a></button>
+                    <button class="cartas__btn"><a class="cartas__btn__a" href="https://uy.linkedin.com/">+Info</a></button>
                 </div>
                 <div class="cartas__colaborador">
                     <h2 class="cartas__h2">Ayudante</h2>
-                    <button class="cartas__btn"><a class="cartas__a" href="https://uy.linkedin.com/">+Info</a></button>
+                    <button class="cartas__btn"><a class="cartas__btn__a" href="https://uy.linkedin.com/">+Info</a></button>
                 </div>
                 </div>
             </div>
