--- a/mascotas/proyecto.html
+++ b/mascotas/proyecto.html
@@ -46,8 +46,8 @@
                     </div>
                 </nav>
         </header>
-    <main class="main__proyect">
-        <div><h1 class="mascotasinf__h1">Mascotas Exóticas</h1></div>
+    <main class="proyect">
+        <div><h1 class="proyect__h1">Mascotas Exóticas</h1></div>
         <section class="container-fluid">
             <div class="row">
                 <div id="carouselExample" class="carousel slide">
@@ -86,35 +86,35 @@
         </section>
         <section class="mascotasinf">
             <div class="contenedor">
-                <div class="mascotasinf__div">
-                   <img class="mascotainf__img" src="../img/cobaya.jpeg" alt="Cobayo">
-                   <h2 class="mascotainf__h2">Cobayo</h2>
-                   <p class="mascotainf__p">La cobaya (Cavia porcelus), es un roedor de la familia de los cávidos y proviene de los Andes peruano-bolivianos. Se trata de un roedor herbívoro de tamaño pequeño-medio y de carácter sociable y cariñoso, aunque algo desconfiado al principio.</p> 
+                <div class="mascotainf__div">
+                   <img class="mascotainf__div__img" src="../img/cobaya.jpeg" alt="Cobayo">
+                   <h2 class="mascotainf__div__h2">Cobayo</h2>
+                   <p class="mascotainf__div__p">La cobaya (Cavia porcelus), es un roedor de la familia de los cávidos y proviene de los Andes peruano-bolivianos. Se trata de un roedor herbívoro de tamaño pequeño-medio y de carácter sociable y cariñoso, aunque algo desconfiado al principio.</p> 
                 </div>
-                <div class="mascotasinf__div">
-                    <img class="mascotainf__img" src="../img/chinchilla.jpg" alt="Chinchilla">
-                    <h2 class="mascotainf__h2">Chinchilla</h2>
-                    <p class="mascotainf__p">Es de tamaño pequeño y aspecto rechoncho. Los ojos son grandes y las orejas relativamente largas y redondeadas. El hocico es corto y tiene numerosas vibrisas largas. Las patas son muy cortas, en especial las delanteras; todas poseen 4 dedos con uñas débiles.</p> 
+                <div class="mascotainf__div">
+                    <img class="mascotainf__div__img" src="../img/chinchilla.jpg" alt="Chinchilla">
+                    <h2 class="mascotainf__div__h2">Chinchilla</h2>
+                    <p class="mascotainf__div__p">Es de tamaño pequeño y aspecto rechoncho. Los ojos son grandes y las orejas relativamente largas y redondeadas. El hocico es corto y tiene numerosas vibrisas largas. Las patas son muy cortas, en especial las delanteras; todas poseen 4 dedos con uñas débiles.</p> 
                  </div>
-                 <div class="mascotasinf__div">
-                    <img class="mascotainf__img" src="../img/conejo.jpg" alt="Conejo">
-                    <h2 class="mascotainf__h2">Conejo</h2>
-                    <p class="mascotainf__p">Los conejos y las liebres se caracterizan por su cuerpo recubierto de un pelaje denso y suave, por sus orejas largas y por carecer de cola, o si la tienen, por ser muy corta. Aunque los nombres comunes de conejo y liebre se utilizan indistintamente, ambos representan especies diferentes.</p> 
+                 <div class="mascotainf__div">
+                    <img class="mascotainf__div__img" src="../img/conejo.jpg" alt="Conejo">
+                    <h2 class="mascotainf__div__h2">Conejo</h2>
+                    <p class="mascotainf__div__p">Los conejos y las liebres se caracterizan por su cuerpo recubierto de un pelaje denso y suave, por sus orejas largas y por carecer de cola, o si la tienen, por ser muy corta. Aunque los nombres comunes de conejo y liebre se utilizan indistintamente, ambos representan especies diferentes.</p> 
                  </div>
-                 <div class="mascotasinf__div">
-                    <img class="mascotainf__img" src="../img/Erizo1.jpg" alt="Erizo">
-                    <h2 class="mascotainf__h2">Erizo</h2>
-                    <p class="mascotainf__p">El erizo es un mamífero insectívoro que mide aproximadamente 24 centímetros y pesa hasta 1 kilogramo y medio. Tienen el lomo cubierto de púas y el resto cubierto de pelo marrón, negro o blanco. Son solitarios y territoriales.</p> 
+                 <div class="mascotainf__div">
+                    <img class="mascotainf__div__img" src="../img/Erizo1.jpg" alt="Erizo">
+                    <h2 class="mascotainf__div__h2">Erizo</h2>
+                    <p class="mascotainf__div__p">El erizo es un mamífero insectívoro que mide aproximadamente 24 centímetros y pesa hasta 1 kilogramo y medio. Tienen el lomo cubierto de púas y el resto cubierto de pelo marrón, negro o blanco. Son solitarios y territoriales.</p> 
                  </div>
-                 <div class="mascotasinf__div">
-                    <img class="mascotainf__img" src="../img/huron.jpg" alt="Húron">
-                    <h2 class="mascotainf__h2">Húron</h2>
-                    <p class="mascotainf__p">El hurón (Mustela putorius furo) es un carnivoro de la familia de los Mustélidos. Es un excelente animal de compañía por su tamaño pequeño, su gestión sencilla, su carácter animado y curioso y por su capacidad de relacionarse bien con las personas</p> 
+                 <div class="mascotainf__div">
+                    <img class="mascotainf__div__img" src="../img/huron.jpg" alt="Húron">
+                    <h2 class="mascotainf__div__h2">Húron</h2>
+                    <p class="mascotainf__div__p">El hurón (Mustela putorius furo) es un carnivoro de la familia de los Mustélidos. Es un excelente animal de compañía por su tamaño pequeño, su gestión sencilla, su carácter animado y curioso y por su capacidad de relacionarse bien con las personas</p> 
                  </div>
-                 <div class="mascotasinf__div">
-                    <img class="mascotainf__img" src="../img/hamster.jpg" alt="Hamster">
-                    <h2 class="mascotainf__h2">Hamster</h2>
-                    <p class="mascotainf__p">Los hámster son roedores domesticados de aproximadamente 15 cm de longitud y entre 100 y 180 gramos de peso. Tienen una esperanza de vida muy corta, que va de 1 a 3 años. Alcanzan su madurez sexual a los 2 meses y medio y pueden llegar a tener entre 6 y 8 crías por parto. Los hámster son animales que deben vivir solos</p> 
+                 <div class="mascotainf__div">
+                    <img class="mascotainf__div__img" src="../img/hamster.jpg" alt="Hamster">
+                    <h2 class="mascotainf__div__h2">Hamster</h2>
+                    <p class="mascotainf__div__p">Los hámster son roedores domesticados de aproximadamente 15 cm de longitud y entre 100 y 180 gramos de peso. Tienen una esperanza de vida muy corta, que va de 1 a 3 años. Alcanzan su madurez sexual a los 2 meses y medio y pueden llegar a tener entre 6 y 8 crías por parto. Los hámster son animales que deben vivir solos</p> 
                  </div>
             </div>
         </section>
