arreglo al H2 en tienda

--- a/mascotas/tienda.html
+++ b/mascotas/tienda.html
@@ -89,7 +89,7 @@
             <h2 class="contact__h2">Aún tienes dudas?</h2>
             <button class="contact__btn"><a href="../contacto/contacto.html">Contáctanos</a></button>
         </section>
-        <div><h2 class="mascotasinf__h1">Mercado de Insumos</h2></div>
+        <div><h2 class="proyect__h1">Mercado de Insumos</h2></div>
         <section class="cartas">
             <div class="contenedor">
                 <div class="cartas__mascotas">
