listo para entregar

--- a/mascotas/proyecto.html
+++ b/mascotas/proyecto.html
@@ -53,22 +53,22 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="../img/huron.jpg" class="d-block w-100" alt="Hurón">
+                        <img src="../img/hamsterok.jpg" class="d-block w-100" alt="Hurón">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/Chinchillax.jpg" class="d-block w-100" alt="Chinchilla">
+                        <img src="../img/cobayook.jpg" class="d-block w-100" alt="Chinchilla">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/conejo.jpg" class="d-block w-100" alt="Conejo">
+                        <img src="../img/conejook.jpg" class="d-block w-100" alt="Conejo">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/erizox.jpg" class="d-block w-100" alt="Erizo">
+                        <img src="../img/erizook.jpg" class="d-block w-100" alt="Erizo">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/hamster.jpg" class="d-block w-100" alt="Hamster">
+                        <img src="../img/chinchillaok.jpg" class="d-block w-100" alt="Hamster">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/cobayo.jpg" class="d-block w-100" alt="Cobayo">
+                        <img src="../img/hurónok.jpg" class="d-block w-100" alt="Cobayo">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -87,32 +87,32 @@
         <section class="mascotasinf">
             <div class="contenedor">
                 <div class="mascotainf__div">
-                   <img class="mascotainf__div__img" src="../img/cobaya.jpeg" alt="Cobayo">
+                   <img class="mascotainf__div__img" src="../img/cobayook.jpg" alt="Cobayo">
                    <h2 class="mascotainf__div__h2">Cobayo</h2>
                    <p class="mascotainf__div__p">La cobaya (Cavia porcelus), es un roedor de la familia de los cávidos y proviene de los Andes peruano-bolivianos. Se trata de un roedor herbívoro de tamaño pequeño-medio y de carácter sociable y cariñoso, aunque algo desconfiado al principio.</p> 
                 </div>
                 <div class="mascotainf__div">
-                    <img class="mascotainf__div__img" src="../img/chinchilla.jpg" alt="Chinchilla">
+                    <img class="mascotainf__div__img" src="../img/chinchillaok.jpg" alt="Chinchilla">
                     <h2 class="mascotainf__div__h2">Chinchilla</h2>
                     <p class="mascotainf__div__p">Es de tamaño pequeño y aspecto rechoncho. Los ojos son grandes y las orejas relativamente largas y redondeadas. El hocico es corto y tiene numerosas vibrisas largas. Las patas son muy cortas, en especial las delanteras; todas poseen 4 dedos con uñas débiles.</p> 
                  </div>
                  <div class="mascotainf__div">
-                    <img class="mascotainf__div__img" src="../img/conejo.jpg" alt="Conejo">
+                    <img class="mascotainf__div__img" src="../img/conejook.jpg" alt="Conejo">
                     <h2 class="mascotainf__div__h2">Conejo</h2>
                     <p class="mascotainf__div__p">Los conejos y las liebres se caracterizan por su cuerpo recubierto de un pelaje denso y suave, por sus orejas largas y por carecer de cola, o si la tienen, por ser muy corta. Aunque los nombres comunes de conejo y liebre se utilizan indistintamente, ambos representan especies diferentes.</p> 
                  </div>
                  <div class="mascotainf__div">
-                    <img class="mascotainf__div__img" src="../img/Erizo1.jpg" alt="Erizo">
+                    <img class="mascotainf__div__img" src="../img/erizook.jpg" alt="Erizo">
                     <h2 class="mascotainf__div__h2">Erizo</h2>
                     <p class="mascotainf__div__p">El erizo es un mamífero insectívoro que mide aproximadamente 24 centímetros y pesa hasta 1 kilogramo y medio. Tienen el lomo cubierto de púas y el resto cubierto de pelo marrón, negro o blanco. Son solitarios y territoriales.</p> 
                  </div>
                  <div class="mascotainf__div">
-                    <img class="mascotainf__div__img" src="../img/huron.jpg" alt="Húron">
+                    <img class="mascotainf__div__img" src="../img/hurónok.jpg" alt="Húron">
                     <h2 class="mascotainf__div__h2">Húron</h2>
                     <p class="mascotainf__div__p">El hurón (Mustela putorius furo) es un carnivoro de la familia de los Mustélidos. Es un excelente animal de compañía por su tamaño pequeño, su gestión sencilla, su carácter animado y curioso y por su capacidad de relacionarse bien con las personas</p> 
                  </div>
                  <div class="mascotainf__div">
-                    <img class="mascotainf__div__img" src="../img/hamster.jpg" alt="Hamster">
+                    <img class="mascotainf__div__img" src="../img/hamsterok.jpg" alt="Hamster">
                     <h2 class="mascotainf__div__h2">Hamster</h2>
                     <p class="mascotainf__div__p">Los hámster son roedores domesticados de aproximadamente 15 cm de longitud y entre 100 y 180 gramos de peso. Tienen una esperanza de vida muy corta, que va de 1 a 3 años. Alcanzan su madurez sexual a los 2 meses y medio y pueden llegar a tener entre 6 y 8 crías por parto. Los hámster son animales que deben vivir solos</p> 
                  </div>
