--- a/mascotas/tienda.html
+++ b/mascotas/tienda.html
@@ -53,7 +53,7 @@
                     <div class="cartas__mascotas">
                     <div class="cartas__tienda erizo">
                         <h2 class="cartas__item">Erizo</h2>
-                        <p class="cartas__parrafo">Hola me llamo Carlos tengo 2 años y espero me adopten pronto. Soy muy dormilon y me gusta jugar a las escondidas...</p>
+                        <p class="cartas__parrafo">Hola me llamo Carlos tengo 2 años y espero me adopten pronto.</p>
                         <button class="cartas__btn"><a class="cartas__btn__a" href="../contacto/contacto.html">Adoptar</a></button>
                     </div>
                     <div class="cartas__tienda huron">
@@ -95,47 +95,47 @@
                         <div class="cartas__mascotas">
                         <div class="cartas__tienda rueda">
                             <h2 class="cartas__item">Rueda</h2>
-                            <p class="cartas__parrafo">Ruedas de ejercicio supersilenciosas para hámster, con soporte ajustable, para ratones, jerbos u otros animales pequeños</p>
+                            <p class="cartas__parrafo">Ruedas de ejercicio supersilenciosas para hámster, con soporte ajustable</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/5i4g7J6" target="_blank">Comprar</a></button>
                         </div>
                         <div class="cartas__tienda gorro">
                             <h2 class="cartas__item">Gorrito</h2>
-                            <p class="cartas__parrafo">2 piezas de mini sombrero de punto a mano lindo sombrero para mascotas con correa ajustable para hámster, serpientes, rana, conejo, lagarto, animales pequeños, accesorios de disfraz de Halloween, accesorios de disfraz de cabeza de reptil, ropa de fotos</p>
+                            <p class="cartas__parrafo">2 piezas de mini sombrero de punto a mano lindo sombrero para mascotas</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/2ws6HaH" target="_blank">Comprar</a></button>
                         </div>
                         <div class="cartas__tienda jaula1">
                             <h2 class="cartas__item">Jaula</h2>
-                            <p class="cartas__parrafo">Jaula de animales pequeños con accesorios, 25.5 x 17 x 20.8 pulgadas, jaula plegable de conejo con bandeja extraíble y plataforma giratoria para hurón chinchilla</p>
+                            <p class="cartas__parrafo">Jaula de animales pequeños con accesorios, 25.5 x 17 x 20.8 pulgadas</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/aD2OKfW" target="_blank">Comprar</a></button>
                         </div>
                         <div class="cartas__tienda jaula2">
                             <h2 class="cartas__item">Mega Jaula</h2>
-                            <p class="cartas__parrafo">Jaula para hámster | Impresionante casa de hámster arcade (blanco) | 18.11 x 11.61 x 21.26 pulgadas</p>
+                            <p class="cartas__parrafo">Jaula para hámster | Impresionante casa de hámster arcade (blanco)</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/4sJXmn6" target="_blank">Comprar</a></button>
                         </div>
                         <div class="cartas__tienda kit_viaje">
                             <h2 class="cartas__item">Kit de Viaje</h2>
-                            <p class="cartas__parrafo">Transportador de mascotas, bolsa transportadora de gatos aprobada por aerolíneas para perros pequeños, medianos y pequeños, bolsa portátil para mascotas para gatos con arnés, cortauñas, cepillo para depilación, cuenco plegable</p>
+                            <p class="cartas__parrafo">Transportador de mascotas, bolsa transportadora de gatos aprobada por aerolíneas</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/dLJJjnR" target="_blank">Comprar</a></button>
                         </div>
                         <div class="cartas__tienda dispensador">
                             <h2 class="cartas__item">Dispen-<br>sador</h2>
-                            <p class="cartas__parrafo">Dispensador Choco Nose de agua para mascotas, sin goteo La mejor botella de agua para mascotas pequeñas/conejos/hurones/hámsteres/cobayos/animalitos Sin manchar , Azul</p>
+                            <p class="cartas__parrafo">Dispensador Choco Nose de agua para mascotas, sin goteo</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/fu7f5CR" target="_blank">Comprar</a></button>
                         </div>
                         <div class="cartas__tienda comedero">
                             <h2 class="cartas__item">Comedero</h2>
-                            <p class="cartas__parrafo">Estante para comedero de heno de conejo, dispensador de agua sin goteo para jaula de conejillo de indias con botella de agua colgante de 20.3 fl oz y soporte para heno para conejos, conejos, animales pequeños, chinchillas, erizos</p>
+                            <p class="cartas__parrafo">Estante para comedero de heno de conejo, dispensador de agua sin goteo</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/1PE9VvS" target="_blank">Comprar</a></button>
                         </div>
                         <div class="cartas__tienda jardin">
                             <h2 class="cartas__item">Juegos de Jardín</h2>
-                            <p class="cartas__parrafo">Juego de juguetes masticables para hámster, juguetes molares de animales pequeños, accesorios de madera para conejillos de indias, chinchillas, jerbos, ratones, ratones, ratones, roedores de ratón, juguete oscilante de balancín (madera)</p>
+                            <p class="cartas__parrafo">Juego de juguetes masticables para hámster, juguetes molares de animales pequeños</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/ffO4Kbs" target="_blank">Comprar</a></button>
                         </div>
                         <div class="cartas__tienda conejera">
                             <h2 class="cartas__item">Conejera</h2>
-                            <p class="cartas__parrafo">Conejera de madera resistente a la intemperie para mascotas al aire libre, refugio para gatos en blanco</p>
+                            <p class="cartas__parrafo">Conejera de madera resistente a la intemperie para mascotas al aire libre</p>
                             <button class="cartas__btn"><a class="cartas__btn__a" href="https://a.co/d/95D7ICK" target="_blank">Comprar</a></button>
                         </div>
                         </div>
