entrega final lista

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lo mejor para tu Mascota Exótica. Veterinaria - Pet Shop  - Criadero. Conocé nuestra nueva tienda y adopta a tu mascota.">
-    <meta name="keywords" content="mascota, huron, hamster, comida hamster, comida conejo, accesorios mascotas, accesorios perro, tienda animales, pet shop, veterinaria, conejo, montevideo, erizo, adoptar mascota, mascotas exoticas, criadero, pet">
+    <meta name="keywords" content="mascota, huron, hamster, accesorios mascotas, accesorios perro, tienda animales, pet shop, veterinaria, conejo, uruguay, erizo, adoptar mascota, mascotas exoticas, criadero, pet">
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="./img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
@@ -55,7 +55,7 @@
                 <div class="negocio__div">
                     <img class="negocio__img" src="./img/mujer-conejo.jpg" alt="animales">
                     <h2 class="negocio__h2">Quienes Somos</h2>
-                    <p class="negocio__p">Somos una empresa familiar con 20 años de experiencia en el asesoramiento y venta de productos y servicios para una gran diversidad de mascotas, tradicionales y exóticas. <br>Contamos con tiendas distribuidos estratégicamente para estar lo mas cerca posible de las familias uruguayas que buscan cuidar y mimar a sus pequeños amigos o que optan simplemente por visitarnos para pasar un momento especial con las mascotas que allí se encuentran. <br> Preferimos y pregonamos un modelo de contacto basado en el trato personal y dedicado de nuestros colaboradores con los clientes que concurren a nuestras tiendas en busca de “lo mejor, para su mejor amigo”.</p>
+                    <p class="negocio__p">Somos una empresa familiar con 20 años de experiencia en el asesoramiento y venta de aacesorios y servicios para una gran diversidad de mascotas, tradicionales y exóticas. <br>Contamos con tiendas distribuidos estratégicamente para estar lo mas cerca posible de las familias uruguayas que buscan cuidar y mimar a sus pequeños amigos o que optan simplemente por visitarnos para pasar un momento especial con las mascotas que allí se encuentran. <br> Preferimos y pregonamos un criadero basado en el trato personal y dedicado de nuestros colaboradores. Más que un Pet shop, los clientes que concurren a nuestras tiendas buscan “lo mejor, para su mascota exótica”.</p>
                 </div>
             </div>
         </section>
