--- a/mascotas/proyecto.html
+++ b/mascotas/proyecto.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Conoce a las mas lindas mascotas Exóticas que tu podrías tener en tu hogar.
         Características de los animalitos exóticos.">
-        <meta name="keywords" content="mascota, huron, hamster, conejo, erizo, chinchilla, adoptar mascota, mascotas exoticas, criadero, pet">
+        <meta name="keywords" content="mascota, huron, hamster, conejo, erizo, chinchilla, cobayo, adoptar mascota, mascotas exoticas, criadero, pet">
         <title>Equipo</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
